--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -30,18 +30,17 @@ body {
   position: relative; }
 
 ::selection {
-  background-color: #a21521;
-  color: #fff; }
+  background-color: #ffd700;
+  color: #000000; }
 
 body {
   font-family: 'Rubik', sans-serif;
   font-weight: 400;
-  line-height: 1.7;
-  color: #333; }
+  color: #212529; }
 
 .heading-primary {
   font-size: 4rem;
-  color: #fff;
+  color: #343a40;
   line-height: 1.2;
   letter-spacing: 0.2rem;
   text-transform: capitalize;
@@ -49,12 +48,12 @@ body {
 
 .heading-secondary {
   font-size: 4rem;
-  color: #fff;
+  color: #ffffff;
   line-height: 1.2; }
 
 .heading-tertiary {
   font-size: 4rem;
-  color: #fff;
+  color: #ffffff;
   line-height: 1.2; }
 
 .paragraph {
@@ -100,7 +99,7 @@ body {
   margin: 0 auto; }
 
 .drag__bgc {
-  background-color: rgba(119, 119, 119, 0.3); }
+  background-color: rgba(73, 80, 87, 0.3); }
 
 .drag__half-opacity {
   opacity: 0.5; }
@@ -111,7 +110,7 @@ body {
 .modal {
   width: 100rem;
   height: 100rem;
-  background-color: #fff;
+  background-color: #ffffff;
   position: absolute;
   z-index: 100;
   top: 50%;
@@ -136,14 +135,34 @@ body {
     opacity: 0;
     display: none; }
 
+.chapter {
+  padding: 4rem 14rem;
+  background-color: #4dabf7; }
+  .chapter__list {
+    padding: 6rem; }
+    .chapter__list-item {
+      list-style: circle;
+      font-size: 2.8rem;
+      line-height: 1.6; }
+      .chapter__list-item:not(:last-child) {
+        margin-bottom: 1.6rem;
+        border-bottom: 1px solid #f8f9fa; }
+  .chapter__question {
+    padding: 6rem; }
+    .chapter__question-item {
+      list-style: circle;
+      font-size: 2.8rem;
+      line-height: 1.6; }
+
 .footer {
-  background-color: #333;
+  background-color: #000000;
   padding: 10rem 0;
+  min-height: 25rem;
   font-size: 1.4rem;
-  color: #f7f7f7; }
-  @media only screen and (max-width: 56.25em) {
-    .footer {
-      padding: 8rem 0; } }
+  color: #f8f9fa; }
+  .footer__grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr); }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 8rem; }
@@ -154,7 +173,7 @@ body {
     width: 15rem;
     height: auto; }
   .footer__navigation {
-    border-top: 1px solid #777;
+    border-top: 1px solid #495057;
     padding-top: 2rem;
     display: inline-block; }
     @media only screen and (max-width: 56.25em) {
@@ -168,18 +187,18 @@ body {
     .footer__item:not(:last-child) {
       margin-right: 1.5rem; }
   .footer__link:link, .footer__link:visited {
-    color: #f7f7f7;
-    background-color: #333;
+    color: #f8f9fa;
+    background-color: #212529;
     text-decoration: none;
     text-transform: uppercase;
     display: inline-block;
     transition: all 0.2s; }
   .footer__link:hover, .footer__link:active {
-    color: #a21521;
+    color: #339af0;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
     transform: rotate(5deg) scale(1.3); }
   .footer__copyright {
-    border-top: 1px solid #777;
+    border-top: 1px solid #495057;
     padding-top: 2rem;
     width: 80%;
     float: right; }
@@ -188,36 +207,20 @@ body {
         width: 100%;
         float: none; } }
 
-.grid {
-  display: grid; }
-  .grid__col-1-5 {
-    grid-template-columns: minmax(25rem, 1fr) 5fr;
-    column-gap: 4rem; }
-    @media only screen and (max-width: 37.5em) {
-      .grid__col-1-5 {
-        grid-template-columns: 1fr;
-        row-gap: 4rem; } }
-  .grid__main {
-    grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 20rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
-  .grid__game {
-    grid-template-columns: [full-start left-start] 5rem [left-end center-start] minmax(6rem, 1fr) [center-end right-start] 5rem [right-end full-end];
-    align-content: start;
-    row-gap: 2rem;
-    column-gap: 2rem;
-    border: 0.1rem solid #000; }
-  .grid__schedule {
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    align-content: start;
-    row-gap: 2.5rem;
-    column-gap: 1.5rem; }
-    @media only screen and (max-width: 37.5em) {
-      .grid__schedule {
-        grid-template-columns: 1fr; } }
-
 .header {
-  background-color: #de541e;
+  background-color: #ff922b;
   height: 70vh;
   padding: 8rem; }
+  .header__chapter {
+    background-color: #ffa94d;
+    min-height: 20vh;
+    padding: 8rem; }
+    .header__chapter-text {
+      font-size: 3.6rem;
+      line-height: 1.6; }
+    .header__chapter-question {
+      font-size: 3.6rem;
+      color: #ffd700; }
 
 .navigation {
   height: 7.5rem;
@@ -228,7 +231,7 @@ body {
   font-size: 1.6rem;
   position: relative;
   box-shadow: 0rem 2rem 1rem rgba(0, 0, 0, 0.1);
-  background: linear-gradient(90deg, #e32636 0%, #de541e 12%, #d4910c 24%, #d4910c 76%, #de541e 88%, #e32636 100%); }
+  background: linear-gradient(90deg, #000000 0%, #212529 100%); }
   .navigation__main {
     position: relative; }
   .navigation__edge {
@@ -248,80 +251,37 @@ body {
     font-size: 3rem;
     font-weight: 300;
     padding: 1rem 2rem;
-    color: #fff;
+    color: #ffffff;
     text-decoration: none;
     text-transform: uppercase;
     transition: all 0.4s; }
   .navigation__link:hover, .navigation__link-help:hover {
-    color: #000;
+    color: #ffd700;
     transform: translateY(-0.4rem); }
   .navigation__link:active, .navigation__link-help:active {
-    color: #000;
+    color: #ff922b;
     transform: translateY(-0.2rem); }
   @media only screen and (max-width: 37.5em) {
     .navigation__link, .navigation__link-help {
       font-size: 1.4rem;
       padding: 1rem 0.5rem; } }
-
-.selection {
-  font-size: 1.6rem;
-  min-height: 100vh; }
-  .selection__list {
-    display: grid;
-    grid-template-columns: 1fr;
-    row-gap: 0.7rem; }
-    .selection__list-number {
-      display: grid;
-      grid-template-columns: 2.8rem auto;
-      column-gap: 0.6rem;
-      list-style: none;
-      font-size: 1.8rem; }
-    .selection__list-point, .selection__list-team {
-      font-size: inherit; }
-  .selection__game {
-    background-color: #f6c665;
-    border-radius: 1rem;
-    padding: 0.8rem 1.6rem;
-    box-shadow: 0rem 1rem 2rem rgba(0, 0, 0, 0.2); }
-    .selection__game-date {
-      grid-column: full-start / full-end;
-      display: flex;
-      justify-content: space-between; }
-    .selection__game-choice {
-      grid-column: right-start / right-end;
-      display: inline-block;
-      border-radius: 0.3rem;
-      font-size: inherit;
-      color: inherit; }
-      .selection__game-choice:hover {
-        cursor: pointer; }
-    .selection__game-day, .selection__game-time {
-      font-size: inherit; }
-    .selection__game-team {
-      grid-column: left-start / center-end;
-      justify-self: left; }
-      .selection__game-team:hover {
-        cursor: pointer; }
-  .selection__form {
-    padding: 0 3rem; }
-  .selection__btn-submit {
-    background-color: #e9855d; }
-  .selection__btn-submit, .selection__btn-clear {
-    padding: 2rem 4rem;
-    border: none;
-    box-shadow: 0rem 2rem 2rem rgba(0, 0, 0, 0.3);
-    border-radius: 0.5rem;
-    transition: all 0.4s;
-    border: 1px solid #000; }
-  .selection__btn-submit:hover, .selection__btn-clear:hover {
-    box-shadow: 0rem 2rem 2rem rgba(0, 0, 0, 0.2);
-    cursor: pointer;
+  .navigation__link-active:link, .navigation__link-active:visited {
+    display: inline-block;
+    height: 100%;
+    font-size: 3rem;
+    font-weight: 300;
+    padding: 1rem 2rem;
+    color: #228be6;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: all 0.4s; }
+  .navigation__link-active:hover {
+    color: #ffd700;
     transform: translateY(-0.4rem); }
-  .selection__btn-submit:active, .selection__btn-clear:active {
-    box-shadow: 0rem 2rem 2rem rgba(0, 0, 0, 0.4);
-    cursor: pointer;
+  .navigation__link-active:active {
+    color: #ff922b;
     transform: translateY(-0.2rem); }
-  .selection__action {
-    display: flex;
-    flex-direction: row-reverse;
-    gap: 5rem; }
+  @media only screen and (max-width: 37.5em) {
+    .navigation__link-active {
+      font-size: 1.4rem;
+      padding: 1rem 0.5rem; } }
