--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -14,22 +14,49 @@
     position: relative;
   }
 
+  &__dropdown {
+    &-menu {
+      position: relative;
+      display: inline-block;
+
+      &:hover .navigation__dropdown-content {
+        display: block;
+        opacity: 1;
+      }
+    }
+
+    &-content {
+      display: block;
+      opacity: 0;
+      position: absolute;
+      background-color: #f1f1f1;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 100;
+    }
+
+    &-link {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+
+      &:hover {
+        background-color: $color-gold;
+      }
+    }
+  }
+
   &__edge {
     padding: 0 5rem;
     display: flex;
     align-items: center;
   }
 
-  &__logo {
-    height: 7.5rem;
-    &:hover {
-      cursor: pointer;
-    }
-  }
-
   &__list-item {
     width: auto;
     display: inline-block;
+    padding: 1rem 2rem;
   }
 
   &__link,
@@ -40,7 +67,6 @@
       height: 100%;
       font-size: 3rem;
       font-weight: 300;
-      padding: 1rem 2rem;
       color: $color-white;
       text-decoration: none;
       text-transform: uppercase;
@@ -51,8 +77,10 @@
       color: $color-gold;
       transform: translateY(-0.4rem);
     }
+
     &:active {
       color: $color-secondary;
+
       transform: translateY(-0.2rem);
     }
     @media only screen and (max-width: $bp-small) {
@@ -68,7 +96,6 @@
       height: 100%;
       font-size: 3rem;
       font-weight: 300;
-      padding: 1rem 2rem;
       color: $color-primary-dark;
       text-decoration: none;
       text-transform: uppercase;
@@ -79,6 +106,7 @@
       color: $color-gold;
       transform: translateY(-0.4rem);
     }
+
     &:active {
       color: $color-secondary;
       transform: translateY(-0.2rem);
@@ -87,5 +115,189 @@
       font-size: 1.4rem;
       padding: 1rem 0.5rem;
     }
+  }
+
+  &__logo {
+    height: 7.5rem;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
+.mobile-navigation {
+  &__checkbox {
+    display: none;
+  }
+
+  &__button {
+    height: 7rem;
+    width: 7rem;
+    position: fixed;
+    // top: 6rem;
+    right: 6rem;
+    border-radius: 50%;
+    z-index: 2000;
+    box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
+    text-align: center;
+    cursor: pointer;
+
+    @include respond(tab-port) {
+      top: 4rem;
+      right: 4rem;
+    }
+
+    @include respond(phone) {
+      top: 3rem;
+      right: 3rem;
+    }
+  }
+
+  &__background {
+    opacity: 0;
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    position: fixed;
+    // top: 6.5rem;
+    right: 6.5rem;
+    background-image: radial-gradient(
+      $color-primary-light,
+      $color-primary-dark
+    );
+    z-index: 1000;
+    transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+
+    @include respond(tab-port) {
+      top: 4.5rem;
+      right: 4.5rem;
+    }
+
+    @include respond(phone) {
+      top: 3.5rem;
+      right: 3.5rem;
+    }
+  }
+
+  &__nav {
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1500;
+
+    opacity: 0;
+    width: 0;
+    transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+
+  &__list {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    list-style: none;
+    text-align: center;
+    width: 100%;
+  }
+
+  &__item {
+    margin: 1rem;
+  }
+
+  &__link {
+    &:link,
+    &:visited {
+      display: inline-block;
+      font-size: 3rem;
+      font-weight: 300;
+      padding: 1rem 2rem;
+      color: $color-white;
+      text-decoration: none;
+      text-transform: uppercase;
+      background-image: linear-gradient(
+        120deg,
+        transparent 0%,
+        transparent 50%,
+        $color-white 50%
+      );
+      background-size: 250%;
+      transition: all 0.4s;
+
+      span {
+        margin-right: 1.5rem;
+        display: inline-block;
+      }
+    }
+
+    &:hover,
+    &:active {
+      background-position: 100%;
+      color: $color-primary;
+      transform: translateX(1rem);
+    }
+  }
+
+  //FUNCTIONALITY
+  &__checkbox:checked ~ &__background {
+    transform: scale(180);
+    opacity: 1;
+  }
+
+  &__checkbox:checked ~ &__nav {
+    opacity: 1;
+    width: 100%;
+  }
+
+  //ICON
+  &__icon {
+    position: relative;
+    margin-top: 3.5rem;
+
+    &,
+    &::before,
+    &::after {
+      width: 3rem;
+      height: 2px;
+      background-color: $color-white;
+      display: inline-block;
+    }
+
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      transition: all 0.2s;
+    }
+
+    &::before {
+      top: -0.8rem;
+    }
+    &::after {
+      top: 0.8rem;
+    }
+  }
+
+  &__button:hover &__icon::before {
+    top: -1rem;
+  }
+
+  &__button:hover &__icon::after {
+    top: 1rem;
+  }
+
+  &__checkbox:checked + &__button &__icon {
+    background-color: transparent;
+  }
+
+  &__checkbox:checked + &__button &__icon::before {
+    top: 0;
+    transform: rotate(135deg);
+  }
+
+  &__checkbox:checked + &__button &__icon::after {
+    top: 0;
+    transform: rotate(-135deg);
   }
 }
