--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,9 +7,9 @@
 @import 'base/typography';
 @import 'base/utilities';
 
+@import 'components/button';
 @import 'components/container';
 @import 'components/drag';
-@import 'components/modal';
 
 @import 'layout/chapter';
 @import 'layout/footer';
