--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,6 +5,19 @@
   font-size: 1.4rem;
   color: $color-gray-light-1;
 
+  &__column {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__title {
+    text-align: center;
+    font-size: $header-font-size;
+    color: $color-gold;
+  }
+
   &__grid {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -22,17 +35,6 @@
   &__logo {
     width: 15rem;
     height: auto;
-  }
-
-  &__navigation {
-    border-top: 1px solid $color-gray-dark-1;
-    padding-top: 2rem;
-    display: inline-block;
-
-    @include respond(tab-port) {
-      width: 100%;
-      text-align: center;
-    }
   }
 
   &__list {
