--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,4 +14,5 @@
 @import 'layout/chapter';
 @import 'layout/footer';
 @import 'layout/header';
+@import 'layout/main';
 @import 'layout/navigation';
