--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -97,9 +97,10 @@ body {
 .btn__container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
   margin: auto;
-  width: 40rem;
+  gap: 5rem;
   padding: 6rem 0; }
 
 .btn__next, .btn__previous {
@@ -162,6 +163,9 @@ body {
     text-align: center;
     font-size: 4.8rem;
     color: #ffd700; }
+    .footer__title:hover {
+      color: #ffffff;
+      cursor: pointer; }
   .footer__grid {
     display: grid;
     grid-template-columns: repeat(5, 1fr); }
@@ -216,32 +220,40 @@ body {
       font-size: 4.8rem;
       color: #ffd700; }
 
+.main {
+  padding: 4rem 14rem;
+  background-color: #4dabf7; }
+  .main__intro {
+    font-size: 2.8rem; }
+
 .navigation {
+  top: 0;
   height: 7.5rem;
   width: 100%;
   display: flex;
   align-items: center;
+  align-content: center;
   justify-content: space-between;
+  justify-items: center;
   font-size: 1.6rem;
-  position: relative;
+  position: sticky;
   box-shadow: 0rem 2rem 1rem rgba(0, 0, 0, 0.1);
   background: linear-gradient(90deg, #000000 0%, #212529 100%); }
   .navigation__main {
     position: relative; }
   .navigation__dropdown-menu {
     position: relative;
-    display: inline-block; }
-    .navigation__dropdown-menu:hover .navigation__dropdown-content {
-      display: block;
-      opacity: 1; }
+    display: inline-block;
+    height: 100%; }
   .navigation__dropdown-content {
     display: block;
     opacity: 0;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: #339af0;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 100; }
+    z-index: 100;
+    margin-top: 1.9rem; }
   .navigation__dropdown-link {
     color: black;
     padding: 12px 16px;
@@ -256,7 +268,11 @@ body {
   .navigation__list-item {
     width: auto;
     display: inline-block;
-    padding: 1rem 2rem; }
+    padding: 1.9rem 2rem 2rem;
+    height: 100%; }
+    .navigation__list-item:hover .navigation__dropdown-content {
+      display: block;
+      opacity: 1; }
   .navigation__link:link, .navigation__link:visited, .navigation__link-help:link, .navigation__link-help:visited {
     display: inline-block;
     height: 100%;
