--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,11 +1,14 @@
 .navigation {
+  top: 0;
   height: 7.5rem;
   width: 100%;
   display: flex;
   align-items: center;
+  align-content: center;
   justify-content: space-between;
+  justify-items: center;
   font-size: 1.6rem;
-  position: relative;
+  position: sticky;
   box-shadow: 0rem 2rem 1rem rgba($color-black, 0.1);
 
   background: linear-gradient(90deg, $color-black 0%, $color-gray-dark-3 100%);
@@ -18,21 +21,18 @@
     &-menu {
       position: relative;
       display: inline-block;
-
-      &:hover .navigation__dropdown-content {
-        display: block;
-        opacity: 1;
-      }
+      height: 100%;
     }
 
     &-content {
       display: block;
       opacity: 0;
       position: absolute;
-      background-color: #f1f1f1;
+      background-color: $color-primary;
       min-width: 160px;
       box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
       z-index: 100;
+      margin-top: 1.9rem;
     }
 
     &-link {
@@ -56,7 +56,13 @@
   &__list-item {
     width: auto;
     display: inline-block;
-    padding: 1rem 2rem;
+    padding: 1.9rem 2rem 2rem;
+    height: 100%;
+
+    &:hover .navigation__dropdown-content {
+      display: block;
+      opacity: 1;
+    }
   }
 
   &__link,
